--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ p {
 </head>
 <body>
 
-<h1 style="background-color:#505050;">GL's GitHub WebPage</h1>
-<p>Nice "WebPage"</p>
+<h1 style="background-color:#505050;"> <a href="https://gl513.github.io/"> GL's GitHub WebPage</a></h1>
+<p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Nice "WebPage"</a></p> 
 
 </body>
 </html>
