--- a/ECSS.html
+++ b/ECSS.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
-
 <html>
 <head>
-<style>
-body {
-  background-image: url("bg.png");
-  background-repeat: no-repeat;
-  background-position: right top;
-  margin-right: 200px;
-  margin-left: 200px;
-  background-attachment: fixed;
- ;
-}
-</style>
-<iframe src="https://scratch.mit.edu/projects/555787769/embed" allowtransparency="true" width="685" height="602" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  
+<iframe src="https://scratch.mit.edu/projects/555787769/embed" allowtransparency="false" width="685" height="602" frameborder="0" scrolling="no" allowfullscreen>
+</iframe>
+
 </head>
 </body>
 </html>
