--- a/ECSS.html
+++ b/ECSS.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   
-<iframe src="https://scratch.mit.edu/projects/555787769/embed" allowtransparency="false" width="685" height="602" frameborder="0" scrolling="no" allowfullscreen>
+<iframe src="https://scratch.mit.edu/projects/555787769/embed" allowtransparency="false" width="685" height="602" frameborder="0" scrolling="no" allowfullscreen="true">
 </iframe>
 
 </head>
