--- a/ecss.html
+++ b/ecss.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+<script>
+  var width = window.innerWidth
+|| document.documentElement.clientWidth
+|| document.body.clientWidth;
+
+var height = window.innerHeight
+|| document.documentElement.clientHeight
+|| document.body.clientHeight;
+  </script>
 <iframe src="https://scratch.mit.edu/projects/555787769/embed" allowtransparency="false" width="685" height="602" frameborder="0" scrolling="no" allowfullscreen="yes">
 </iframe>
 
