--- a/ecss.html
+++ b/ecss.html
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script>
-  var width = window.innerWidth
-|| document.documentElement.clientWidth
-|| document.body.clientWidth;
 
-var height = window.innerHeight
-|| document.documentElement.clientHeight
-|| document.body.clientHeight;
-  </script>
-<iframe src="https://scratch.mit.edu/projects/555787769/embed" allowtransparency="false" width="685" height="602" frameborder="0" scrolling="no" allowfullscreen="yes">
+<iframe src="https://scratch.mit.edu/projects/555787769/embed" allowtransparency="false" width="var w = window.innerWidth" height="var h = window.innerHeight" frameborder="0" scrolling="no" allowfullscreen="yes">
 </iframe>
 
 </head>
