--- a/discord.html
+++ b/discord.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
 <body>
-<iframe src="https://discord.com/widget?id=853287213289832452&theme=dark" width="var w = window.innerWidth" height="var h = window.innerHeight" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+<iframe src="https://discord.com/widget?id=853287213289832452&theme=dark" width="window.innerWidth" height="window.innerHeight" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </body>
 </head>
