--- a/discord.html
+++ b/discord.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <head>
 <body>
-<iframe src="https://discord.com/widget?id=853287213289832452&theme=dark" width="1366" height="728" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+<style>
+  div {
+    padding: 0px;
+  }
+<div>
+  <iframe src="https://discord.com/widget?id=853287213289832452&theme=dark" width="1366" height="728" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
+  </iframe>
+  </div>
 </body>
 </head>
