--- a/discord.html
+++ b/discord.html
@@ -3,8 +3,9 @@
 <body>
 <style>
   div {
-    padding: 1px;
+    padding: 0px;
   }
+  </style>
 <div>
   <iframe src="https://discord.com/widget?id=853287213289832452&theme=dark" width="1366" height="728" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
   </iframe>
