--- a/discord.html
+++ b/discord.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <head>
 <body>
-<style>
-  div {
-    padding: 0px;
-    margin: auto;
-  }
-  </style>
-<div>
-  <iframe src="https://discord.com/widget?id=853287213289832452&theme=dark" width="1360" height="700" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
-  </iframe>
-  </div>
+<div style="overflow: hidden;position: relative; height:200px;"  >
+      <iframe class="" rel="nofollow" style="height: 800px; width:1400px; transform: scale(0.294167) !important; transform-origin: 0px 0px;" frameborder="0" scrolling="no" 
+      src="https://discord.com/widget?id=853287213289832452&theme=dark"></iframe></div>
 </body>
 </head>
